--- a/ProfeAriel/portafolio web/Css/style.css
+++ b/ProfeAriel/portafolio web/Css/style.css
@@ -1,116 +1,94 @@
 :root{
-    --body-bg-color: rgb(49, 222, 112, 0.563);
-    --text-color: rgb(0, 0, 0);
-    --colorh1-color: rgb(128, 0, 255);
+    --fondo-proyectos: rgb(124, 123, 123);
 }
+
 body {
-        background: var(--body-bg-color);
-        color: var(--text-color);
-        font-family: "segoe ui", Tahoma, Genevan verdana, sans-seriF;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
 }
-h1, h2{
-    color: var(--colorh1-color)
+/* titulo del header */
+.titulo {
+    text-align: center;
+    color: rgb(0, 0, 0);
+    text-shadow: 3px 3px 3px rgba(255, 0, 0, 0.705);
+    font-family: sans-serif;
+    background-color: rgb(20, 20, 20);
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 3px 3px 3px rgba(255, 0, 0, 0.842);
 }
-.navigation li{
+
+
+.navegacion {
+    margin-top: 45px;
+    display: flex; 
+    justify-content: center; 
+    gap: 1rem;
+    padding: 0; 
+    list-style: none; 
+    flex-wrap: wrap; 
+}
+
+.navegacion li {
     font-size: 1rem;
     width: 100px;
     text-align: center;
     padding: 0.5rem;
     border-radius: 0.5rem;
-    background: #f0eaea1a;
-    box-shadow: 0 0 0.5rem rgb(0, 0, 0, 0.5);
-    display: flex;
-    gap: 2rem;
-    list-style-type: none;
-    justify-content: flex-end;
-    margin: 0 3rem;
+    background-color: rgb(5, 5, 5);
+    box-shadow: 0 0 0.5rem rgba(255, 0, 0, 0.781);
+    list-style: none; 
 }
-a{
+
+a {
+    margin-bottom: 4px;
     text-decoration: none;
-    color: rgb(86, 67, 255);
+    color: rgb(255, 0, 0);
+    text-shadow: 3px 3px 3px rgba(255, 0, 0, 0.808);
+    font-family: sans-serif;
 }
-.sobremi{
+
+
+.main-container{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
 }
-.container-sobremi{
-    display: flex;
-    width: 65%;
-    padding: 2rem;
-    margin-top: 5rem;
-    line-height: 2.5rem;
-    font-size: large;
-    color: black;
-    gap: 5rem;
-    align-items: center;
-}
-.img-perfil{
-    border-radius: 50%;
-}
-.experiencia, .estudios{
-    display: flex;
-    justify-content: center;
-    padding: 2rem;
-    color: rgb(0, 0, 0);
-}
-.container-experiencia, .container-estudio{
-    width: 100%;
-    padding: 2rem;
-    margin-top: 5rem;
-    line-height: 2.5rem;
-    font-size: large;
-    margin: 1rem;
-}
+
+
+
+/*celular (pantalla pequeña, hasta 767px)*/
 @media (max-width: 767px) {
-    .titulo{
+    .titulo {
         justify-content: center;
     }
-    .navigation{
+    .navegacion {
         flex-direction: column;
         gap: 1rem;
         align-items: center;
     }
-    .container-sobremi{
-        width: 100%;
-        padding: 1;
-        margin-top: 1rem;
-        line-height: 2.5rem;
-        font-size: small;
-        flex-direction: column;
-    }
-    .container-experiencia, .container-estudio{
-        width: 100%;
-        margin: 0rem;
-    }
-    .experiencia, .estudios{
-        width: 100%;
-        padding: 1rem;
-        margin-top: 1rem;
-        font-size: small;
-    }
 }
-@media (min-width: 786px) and (max-width: 1023px) {
+
+/* tableta (pantalla medianas, entre 768 y 1023 px) */
+@media (min-width: 768px) and (max-width: 1023px){
     .titulo{
         justify-content: center;
     }
-    .navigation{
+    .navegacion{
         gap: 2rem;
         justify-content: center;
     }
-    .experiencia, .estudios{
-        width: 75%;
-    }
 }
-@media (min-width: 1023px) {
+
+/* escritorio (pantallas anchas, 1024px y superiores) */
+@media (min-width: 1024px){
     .titulo{
         justify-content: flex-start;
+        margin-left: 300px;
+        margin-right: 300PX;
     }
-    .navigation{
-        gap: 3rem;
-        justify-content: flex-end;
-        margin: 0 3rem;
-    }
-    .experiencia, .estudios{
-        width: 75%;
+    .navegacion{
+        gap: 1rem;
+        margin: 0 1rem;
     }
 }
